--- a/project.config.json
+++ b/project.config.json
@@ -41,13 +41,28 @@
 			"current": -1,
 			"list": []
 		},
+		"plugin": {
+			"current": -1,
+			"list": []
+		},
 		"game": {
 			"currentL": -1,
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
-			"list": []
+			"current": 0,
+			"list": [
+				{
+					"id": 0,
+					"name": "模板消息进入",
+					"pathName": "pages/orderMeal/orderDetail",
+					"query": "id=1",
+					"scene": 1043,
+					"referrerInfo": {
+						"appId": "wx0f0948970ec037a1"
+					}
+				}
+			]
 		}
 	}
 }
